content splittig mostly works

--- a/main.less
+++ b/main.less
@@ -1,1 +1,13 @@
-// Does this override karmic styles?
+// This is auto included and overridden by the karmic style included in head
+.nav__heading{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
+// FIXME: This is too specific because bootstrap is too specific.
+// This should be fixed in the karmic style bootstrap files.
+.nav a.nav__entry{
+  font-size: 13px;
+  padding-left: 20px;
+}
