--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,26 @@
 // This is auto included and overridden by the karmic style included in head
 
+.content{
+  position: relative;
+
+}
+
+.fill-entry{
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-color: yellow;
+}
+
+.fill-example{
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  background-color: red;
+}
+
 .section.app-content{
   background: none;
 }
