--- a/index.jade
+++ b/index.jade
@@ -3,9 +3,10 @@ body
   ul.col-xs-2.section.section--fog.nav
     //- Nav will autogenerate here
 
-  //- div.col-xs-5.section.section--fog.section--example-bg.pull-right
+  div.col-xs-5.col-xs-offset-2.fill-entry
+  div.col-xs-5.fill-example
 
-  div.col-xs-10.col-xs-offset-2.section.section--white.content
+  div.col-xs-10.col-xs-offset-2.section.content
 
     //- Include docs files here
     include:markdown /includes/demo.md
