revisited this project. everything was broken. moved a bunch of NPM stuff around and pulled hair out. Turns out the company css file name changed slightly. I deserved that pain. grrr

--- a/_layout.jade
+++ b/_layout.jade
@@ -2,7 +2,7 @@ doctype
 head
   title An example
 
-  link(rel='stylesheet', href='https://getdash.io/css/karmic-style.css')
+  link(rel='stylesheet', href='https://getdash.io/css/karmic.css')
   link(rel='stylesheet', href='/css/jquery.tocify.css')
   link(rel='stylesheet', href='/css/main.css')
   
