--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,6 @@ body
   div.col-xs-10.col-xs-offset-2.section.content
 
     //- Include docs files here
-    include:markdown /includes/demo.md
+    include:md /includes/demo.md
 
   
