--- a/index.jade
+++ b/index.jade
@@ -1,10 +1,10 @@
 body
 
-  ul.col-xs-2.section.section--fog.nav
+  ul.col-xs-2.section.nav.bg--white
     //- Nav will autogenerate here
 
-  div.col-xs-5.col-xs-offset-2.fill-entry
-  div.col-xs-5.fill-example
+  div.col-xs-5.col-xs-offset-2.fill--entry.bg--white.border--mist
+  div.col-xs-5.fill--example.bg--athens
 
   div.col-xs-10.col-xs-offset-2.section.content
 
